--- a/SendImageClient/Views/MainWindow.xaml
+++ b/SendImageClient/Views/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:SendImageClient" xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity" xmlns:cmd="http://www.galasoft.ch/mvvmlight"
+        xmlns:local="clr-namespace:SendImageClient" xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity" xmlns:cmd="http://www.galasoft.ch/mvvmlight" 
         mc:Ignorable="d"
         Title="MainWindow" Height="600" Width="800">
     <Grid>
@@ -57,7 +57,7 @@
                     Foreground="White"
                     FontSize="20"
                     Height="50"
-                        Command="{Binding SendCommand}"
+                        Command="{Binding SendImageCommand}"
                     Width="150"
                     Margin="0 30 0 0" >
                         <Button.Resources>
@@ -74,7 +74,7 @@
                     Foreground="White"
                     FontSize="20"
                     Height="50"
-                    Width="150"
+                    Width="200"
                     Margin="0 30 0 0" >
                         <Button.Resources>
                             <Style TargetType="{x:Type Border}">
